--- a/index.css
+++ b/index.css
@@ -1,11 +1,9 @@
-body {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
 h1,
 h2,
 p {
-  font-family: 'Poppins', cursive;
+  font-family: cursive;
   text-align: center;
 }
 
@@ -13,61 +11,112 @@ p {
   min-height: 300px;
 }
 
-ul li {
-  list-style: none;
-  display: flex;
+.main {
+  display: none;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  margin: 10px;
-  border: solid black 1px;
-  border-radius: 5px;
-  background-color: #d9d9d9;
 }
 
-.add-book {
-  border: solid black 2px;
-  width: 50%;
-  margin: 0 0 0 20rem;
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.add-book ul li:nth-child(odd) {
-  background-color: #a29c9c;
+.book-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
-.add-book ul li span {
-  padding-left: 10px;
-}
-
-hr {
-  width: 50px;
-  border: solid black 1px;
-}
-
-input {
-  border: solid black 2px;
-  color: black;
-}
-
-button {
+.removeButton {
+  font-family: 'Poppins', cursive;
+  border: 1px solid #2d2d3d;
+  box-shadow: 3px 5px;
+  margin: 1%;
   background-color: white;
-  border: solid black 2px;
-  box-shadow: 2px 1px 0 rgba(0, 0, 0, 1);
+  cursor: pointer;
 }
 
-.menu {
+#addButton {
+  font-family: 'Poppins', cursive;
+  background-color: white;
+  border: 1px solid #2d2d2d;
+  box-shadow: 3px 5px;
+}
+
+#bookShelf {
+  border: 1px solid #2d2d2d;
+  margin: 5%;
+  max-height: 270px;
+  overflow: scroll;
+}
+
+.nav-bar {
+  margin: 5%;
+  margin-bottom: 1%;
+  padding-left: 5%;
+  padding-right: 5%;
+  border: 1px solid #2d2d2d;
   display: flex;
-  border: solid black 2px;
-  width: 58%;
-  margin: 0 0 0 17rem;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-#menu-list {
+.nav-list {
   display: flex;
-  margin: 0 0 0 17rem;
+  flex-direction: row;
+  list-style: none;
 }
 
-h3 {
-  margin: 18px 0 0 0;
+.nav-item {
+  font-family: 'Poppins', cursive;
+  padding: 5%;
+  min-width: max-content;
+  cursor: pointer;
+  text-align: center;
+}
+
+li {
+  text-align: center;
+  padding-top: 5%;
+}
+
+#logo {
+  cursor: pointer;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  margin: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  border: 1px solid #2d2d2d;
+}
+
+#listSection {
+  display: none;
+}
+
+.contact {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+.book-row:nth-child(even) {
+  background-color: rgb(230, 230, 230);
+}
+
+#time {
+  text-align: end;
+  margin-right: 5%;
 }
 
